Change button tag to <a> tag, make alt attribute empty for images and add <aria-hidden=true> to them, add border-radius and overflow:hidden to the main container that wraps the three cards to avoid having to change the border radius multiple times

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -1,5 +1,7 @@
 .container {
     display: flex;
+    border-radius: 10px;
+    overflow: hidden;
 
     @include breakpoint(lg) {
         flex-direction: column;
@@ -9,13 +11,6 @@
 .card--sedan {
     @include card();
     background-color: $color-card-bg-sedan;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-
-    @include breakpoint(lg) {
-        border-bottom-left-radius: 0px;
-        border-top-right-radius: 10px;
-    }
 }
 
 .card--suv {
@@ -26,13 +21,6 @@
 .card--luxury {
     @include card();
     background-color: $color-card-bg-luxury;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-
-    @include breakpoint(lg) {
-        border-top-right-radius: 0px;
-        border-bottom-left-radius: 10px;
-    }
 }
 
 .card__icon {
